--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -6,6 +6,14 @@
 
 <div itemscope itemtype="http://schema.org/Person">
 
+  <style>
+    @media screen and (max-width: 768px) {
+        .author__content {
+            margin-top: 80px; /* Adjust this if necessary */
+        }
+    }
+</style>
+
   <div class="author__avatar">
     {% if author.avatar contains "://" %}
     	<img src="{{ author.avatar }}" alt="{{ author.name }}">
