--- a/_sass/layout/_navigation.scss
+++ b/_sass/layout/_navigation.scss
@@ -10,7 +10,7 @@
   @include container;
   @include clearfix;
   margin-top: 0;
-  margin-bottom: 0;
+  margin-bottom: 5em;
   padding-left: 2em;
   padding-right: 2em;
   font-family: $sans-serif;
