--- a/_sass/layout/_masthead.scss
+++ b/_sass/layout/_masthead.scss
@@ -57,3 +57,9 @@
     font-weight: 700;
   }
 }
+
+@media (orientation: portrait) {
+  .masthead {
+    padding-bottom: 1em; // Adjust value as necessary
+  }
+}
