--- a/_sass/layout/_sidebar.scss
+++ b/_sass/layout/_sidebar.scss
@@ -12,6 +12,7 @@
 
   @include clearfix();
   margin-bottom: 1em;
+  margin-top: 5em;
 
   @media screen and (min-width: $sidebar-screen-min-width) {
     height: 100vh;
